# Logic-Building

./: .gitignore  .gitmodules  AreaOfCircle.js  LICENSE  README.md  Series1.js  Series2.js  SumOfNumbers.js
Rust/axum_practices/: Cargo.toml  a.json
Rust/axum_practices/resources/config/: config-development.json  config-test.json
Rust/axum_practices/src/: lib.rs  main.rs
Rust/axum_practices/src/tasks/: mod.rs
Rust/axum_practices/src/tasks/config_loader/: mod.rs
Rust/axum_practices/src/tasks/grpc_server/: build.rs  mod.rs
Rust/axum_practices/src/tasks/grpc_server/protos/: todos.proto
Rust/axum_practices/src/tasks/rest_apis/: mod.rs
Rust/axum_practices/src/tasks/rest_apis/employee/: service.rs
Rust/axum_practices/src/tasks/rest_apis/middlewares/: csrf_xsrf.rs  mod.rs
Rust/axum_practices/src/tasks/rest_apis/routes/: mod.rs
Rust/axum_practices/src/tasks/rest_apis/student/: service.rs
Rust/axum_practices/src/tasks/rest_apis/user/: model.rs  service.rs
Rust/axum_practices/src/tasks/rest_apis/utils/: mod.rs  tikv_db.rs
Rust/axum_practices/src/tasks/tikv_tutorial/: mod.rs
Rust/axum_practices/src/tasks/tikv_tutorial/employee/: mod.rs  model.rs  service.rs
Rust/axum_practices/src/tasks/tikv_tutorial/health_check/: mod.rs
Rust/axum_practices/src/tasks/tikv_tutorial/routes/: mod.rs
Rust/rest_apis/: Cargo.toml
Rust/rest_apis/src/: main.rs
Rust/rest_apis/src/employee/: mod.rs  service.rs
Rust/rest_apis/src/middlewares/: cors.rs  mod.rs
Rust/rest_apis/src/routes/: mod.rs
Rust/rest_apis/src/student/: mod.rs  service.rs
Rust/rest_apis/src/user/: mod.rs  service.rs
Rust/rest_apis/src/utils/: mod.rs  structs.rs  tikv_db.rs
Rust/rest_apis/src/utils/data/: Employee.json  StudentData.json  Users.json
(+153 files in other folders)
