[package]
name = "rest_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
serde = { version = "1.0.195",features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
config = "0.14"
axum = "0.7.4"
hyper = "1.1.0"
tower-http = { version = "0.5.1", features = ["cors"] }
lazy_static = "1.4.0"
uuid = {version = "1.7", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]}
rand = "0.8.5"
tikv-client = "0.3"
